--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
                         на все вопросы</div>
                 </div>
                 <button class="button button_main">заказать консультацию</button>
-                <div class="promo__link">или
+                <div class="promo__link">или <br class="xxs">
                     <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
@@ -47,19 +47,25 @@
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="benefits__wrapper">
                 <div class="benefits__item">
-                    <img src="icons/4_cup.png" alt="img" class="benefits__icon">
+                    <div class="benefits__icon">
+                        <img src="icons/4_cup.png" alt="img">
+                    </div>
                     <div class="benefits__subtitle">Делимся опытом</div>
                     <div class="benefits__text">Наши сотрудники всегда готовы поделиться своим опытом, 
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!</div>
                 </div>
                 <div class="benefits__item">
-                    <img src="icons/5_heart.png" alt="img" class="benefits__icon">
+                    <div class="benefits__icon">
+                        <img src="icons/5_heart.png" alt="img">
+                    </div>
                     <div class="benefits__subtitle">Заботимся о здоровье</div>
                     <div class="benefits__text">Мы работаем для того,<br>
                         чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!</div>
                 </div>
                 <div class="benefits__item">
-                    <img src="icons/6_shoe.png" alt="img" class="benefits__icon">
+                    <div class="benefits__icon">
+                        <img src="icons/6_shoe.png" alt="img">
+                    </div>
                     <div class="benefits__subtitle">Учим бегать</div>
                     <div class="benefits__text">Помогаем с обучением<br>правильной технике бега!<br>Дружим с крупнейшей школой бега в России - <a href="#"> I LOVE RUNNING.</a></div>
                 </div>
